# namma-dsl-rs

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  flake.nix
src/: config.rs  main.rs  utils.rs
src/generator/: diesel_model.rs  diesel_schema.rs  domain_type.rs  mod.rs  queries.rs  sql.rs
src/parser/: storage.rs
src/types/: storage.rs
test-fixture/: Cargo.toml
test-fixture/spec/: dsl-config.toml
test-fixture/spec/Storage/: Account.yaml  Seat.yaml
test-fixture/src/: lib.rs
