[package]
name = "namma-dsl-rs"
version = "0.1.0"
edition = "2021"
description = "Code generator: YAML specs -> Rust + Diesel ORM storage layer"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
heck = "0.5"
walkdir = "2"
anyhow = "1"
