[package]
name = "test_fixture"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
diesel = { version = "2.2", default-features = false, features = ["postgres", "chrono", "serde_json", "uuid"] }
diesel-async = { version = "0.5", features = ["postgres", "bb8"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shared = { path = "../../shared-kernel-rs/crates/shared" }

[workspace]
